# gba-raycaster

./: .gitignore  CMakeLists.txt  assets.cpp  assets.hpp  camera.hpp  camera.iwram.cpp  fixed.hpp  lut.hpp  main.cpp  main.iwram.cpp  raycaster.hpp  raycaster.iwram.cpp  readme.md  renderer.hpp  renderer.iwram.cpp
assets/: map.txt
map/: CMakeLists.txt  main.c
other/: 2x.raycaster.iwram.cpp  4x.raycaster.iwram.cpp  array.raycaster.iwram.cpp  cache.raycaster.iwram.cpp  fixed.raycaster.iwram.cpp  float.raycaster.iwram.cpp  max.raycaster.iwram.cpp  min.raycaster.iwram.cpp  optimized.raycaster.iwram.cpp
tex/: CMakeLists.txt  main.c
tools/: Tools.cmake
tools/mapper/: mapper.c
